<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registro_de_usuario"
            android:background="#8000D7"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:gravity="center"
            android:padding="16dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_usuario"
            android:inputType="text"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:backgroundTint="#8000D7" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nombre"
            android:inputType="textPersonName"
            android:layout_marginTop="16dp"
            android:padding="12dp"
            android:backgroundTint="#8000D7" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo_electronico"
            android:inputType="textEmailAddress"
            android:layout_marginTop="16dp"
            android:padding="12dp"
            android:backgroundTint="#8000D7" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"
            android:padding="12dp"
            android:backgroundTint="#8000D7" />

        <Button
            android:id="@+id/btnCrearUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            android:layout_marginTop="32dp"
            android:backgroundTint="#8000D7"
            android:textColor="#FFFFFF"
            android:padding="12dp"
            android:contentDescription="@string/btn_registrarse" />
    </LinearLayout>
</ScrollView>

